compatible jdk1.5(iframework_2.5.jar)